Testing out material grid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<app-material-test>
-</app-material-test>
-test push to the master branch
+<div class="container">
+  <app-material-test>
+  </app-material-test>
+  <app-material-grid-test>
+  </app-material-grid-test>
+</div>
