--- a/src/app/material-grid-test/material-grid-test.component.html
+++ b/src/app/material-grid-test/material-grid-test.component.html
@@ -1,10 +1,12 @@
-<mat-grid-list cols="4" rowHeight="100px">
+<mat-grid-list cols="5">
   <mat-grid-tile
-      class="tile"
-      *ngFor="let tile of tiles"
-      [colspan]="tile.cols"
-      [rowspan]="tile.rows"
-      [style.background]="tile.color">
-    {{tile.text}}
+    class="tile"
+    *ngFor="let tile of tiles; let i = index"
+    [colspan]="tile.cols"
+    [rowspan]="tile.rows"
+    [style.backgroundColor]="tile.color">
+    <mat-grid-tile-header>
+      Username
+    </mat-grid-tile-header>
   </mat-grid-tile>
 </mat-grid-list>
