--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <app-material-test>
-  </app-material-test>
-  <app-material-grid-test>
-  </app-material-grid-test>
+  <!--  <app-material-test>-->
+  <!--  </app-material-test>-->
+  <!--  <app-material-grid-test>-->
+  <!--  </app-material-grid-test>-->
+  <button mat-raised-button color="primary" (click)="onExplore()">Explore</button>
 </div>
