--- a/src/app/header/navbar.component.html
+++ b/src/app/header/navbar.component.html
@@ -1,3 +1,17 @@
 <div class="navbar">
-
+  <div class="container">
+    <ul class="navbar__list">
+      <li class="navbar__list__item navbar__list__item_brand">
+        <img class="brand__logo" src="../../assets/images/AngularShield.svg" alt="Angugram">
+        <span class="brand__text">ngugram</span>
+      </li>
+      <li class="navbar__list__item navbar__list__item_right">
+        <div class="avatar" *ngIf="me">
+          <div class="avatar__backdrop"></div>
+          <span class="avatar__text">Me</span>
+          <img class="avatar__image" [src]="me.profilePicUrl" [alt]="me.username" [title]="me.fullName">
+        </div>
+      </li>
+    </ul>
+  </div>
 </div>
