--- a/src/app/header/navbar.component.scss
+++ b/src/app/header/navbar.component.scss
@@ -1,7 +1,92 @@
+@import "../core/variables/colors";
+
 .navbar {
+  $navbarHeight: 75px;
   font-family: Roboto, sans-serif;
-  align-items: center;
-  display: flex;
-  height: 50px;
-  background-color: #bbbbbb;
+  width: 100%;
+  height: $navbarHeight;
+  background-color: $cream;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.55);
+  position: fixed;
+  z-index: 999;
+
+  &__list {
+    list-style: none;
+    height: $navbarHeight;
+    display: flex;
+
+    &__item {
+      display: inline-flex;
+      align-items: center;
+      vertical-align: middle;
+      color: $black;
+
+      .avatar {
+        $transitionTime: 0.3s;
+        position: relative;
+        overflow: hidden;
+        border-radius: 50%;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        margin-left: 5px;
+        cursor: pointer;
+
+        &__image {
+          border-radius: 50%;
+          max-width: 100%;
+        }
+
+        &__backdrop {
+          position: absolute;
+          height: 100px;
+          width: 100px;
+          background-color: rgba(0, 0, 0, .50);
+          transition: $transitionTime;
+          opacity: 0;
+        }
+
+        &__text {
+          position: absolute;
+          color: $white;
+          text-align: center;
+          font-size: 12px;
+          text-transform: uppercase;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          transition: $transitionTime;
+          opacity: 0;
+        }
+
+        &:hover {
+          .avatar {
+            &__text, &__backdrop {
+              opacity: 1;
+            }
+          }
+        }
+
+      }
+
+      &_brand {
+        cursor: pointer;
+
+        .brand {
+          &__logo {
+            width: 50px;
+          }
+
+          &__text {
+            text-transform: uppercase;
+            margin-left: 2px;
+          }
+        }
+      }
+
+      &_right {
+        margin-left: auto;
+      }
+    }
+  }
 }
