Create home component & replace elements from app component to the new home component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<app-navbar></app-navbar>
-<div class="container">
-  <!--  <app-material-test>-->
-  <!--  </app-material-test>-->
-  <!--  <app-material-grid-test>-->
-  <!--  </app-material-grid-test>-->
-  <button mat-raised-button color="primary" (click)="onExplore()">Explore</button>
-</div>
+<router-outlet></router-outlet>
