--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,37 @@
 <app-search
   (searchValue)="acceptSearch($event)">
 </app-search>
-<div class="" *ngIf="username === MY_PROFILE_USERNAME">
-  It's me =)
+<br>
+<app-preloader *ngIf="!isDataLoaded"></app-preloader>
+<br>
+<div class="user" *ngIf="user;">
+  <mat-card class="user__card">
+    <img
+      *ngIf="user.username === MY_PROFILE_USERNAME"
+      class="user__crown"
+      src="../../assets/images/crown.png"
+      alt="Developer">
+    <mat-card-header>
+      <div mat-card-avatar class="user__avatar" [ngStyle]="setAvatar()"></div>
+      <mat-card-title>{{ user.fullName ? user.fullName : user.username }}</mat-card-title>
+      <mat-card-subtitle> {{ user.username }}</mat-card-subtitle>
+    </mat-card-header>
+    <!--    <img mat-card-image [src]="user.profilePicUrlHD" [alt]="user.username">-->
+    <mat-card-content>
+      <p class="user__bio">{{ user.biography }}</p>
+      <div *ngIf="user.externalUrl">
+        <hr>
+        <a class="user__ex-link"
+           target="_blank"
+           [href]="user.externalUrl"
+           *ngIf="user.externalUrl">
+          {{ user.externalUrl | shorten: 50 }}
+        </a>
+      </div>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button title="Followers">{{ user.followers }}</button>
+      <button mat-button title="Followings">{{ user.followings }}</button>
+    </mat-card-actions>
+  </mat-card>
 </div>
-
