Rename color variables name & add info

--- a/src/app/core/variables/_colors.scss
+++ b/src/app/core/variables/_colors.scss
@@ -1,5 +1,7 @@
-$black: #050505;
-$blue: #1B9AAA;
-$gray: #DDDBCB;
-$cream: #F5F1E3;
+// Color scheme taken from: https://coolors.co
+$firstColor: #0E1116;
+$secondColor: #3D348B;
+$thirdColor: #673AB7;
+$fourthColor: #7678ED;
+$fifthColor: #F7B801;
 $white: #FFFFFF;
