--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,7 +5,7 @@
   font-family: Roboto, sans-serif;
   width: 100%;
   height: $navbarHeight;
-  background-color: $cream;
+  background-color: $fourthColor;
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.55);
   position: fixed;
   top: 0;
