--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -21,7 +21,7 @@
       align-items: center;
       vertical-align: middle;
       outline: none;
-      color: $black;
+      color: $white;
 
       .avatar {
         $transitionTime: 0.3s;
