--- a/src/app/user/user-posts/user-posts.component.scss
+++ b/src/app/user/user-posts/user-posts.component.scss
@@ -36,7 +36,7 @@
 
       &__info {
         text-align: center;
-        color: $cream;
+        color: $white;
         position: absolute;
         top: 50%;
         left: 50%;
