--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -41,23 +41,25 @@
     <mat-card-actions>
       <button
         mat-button
-        [matTooltip]="user.followers > 1000 ? user.followers.toString(): ''"
+        [matTooltip]="user.followers.toString()"
+        [matTooltipDisabled]="user.followers < 1000"
+        matTooltipShowDelay="500"
         color="primary"
-        title="Followers"
         class="user__followers-info">
         <span class="info">{{ user.followers | numberFormat }}</span>
-        <i class="icon material-icons">
+        <i class="icon material-icons" title="Followers">
           favorite_border
         </i>
       </button>
       <button
         mat-button
-        [matTooltip]="user.followings > 1000 ? user.followings.toString(): ''"
+        [matTooltip]="user.followings.toString()"
+        [matTooltipDisabled]="user.followings < 1000"
+        matTooltipShowDelay="500"
         color="primary"
-        title="Followings"
         class="user__followers-info">
         <span class="info">{{ user.followings | numberFormat }}</span>
-        <i class="icon material-icons">
+        <i class="icon material-icons" title="Followings">
           favorite
         </i>
       </button>
