Apply numberFormat pipe on likes count

--- a/src/app/user/user-posts/user-posts.component.html
+++ b/src/app/user/user-posts/user-posts.component.html
@@ -28,7 +28,7 @@
           </i>
         </div>
         <p class="image__info__likes-count">
-          {{ post.likes }}
+          {{ post.likes | numberFormat }}
         </p>
       </div>
       <img
