--- a/src/app/photo-dialog/photo-dialog.component.scss
+++ b/src/app/photo-dialog/photo-dialog.component.scss
@@ -27,3 +27,21 @@
     margin-bottom: 10px;
   }
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
