--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,8 @@
 <app-navbar></app-navbar>
+<h1
+  class="welcome">
+  <span class="brand">A</span>ngugram: v{{ version }}
+</h1>
 <div class="container">
   <div class="content">
     <router-outlet></router-outlet>
