--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,7 @@
 <app-navbar></app-navbar>
-<h1
-  class="welcome">
-  <span class="brand">A</span>ngugram: v{{ version }}
-</h1>
 <div class="container">
   <div class="content">
+    <app-search></app-search>
     <router-outlet></router-outlet>
   </div>
 </div>
