--- a/src/app/user/user-posts/user-posts.component.scss
+++ b/src/app/user/user-posts/user-posts.component.scss
@@ -1,4 +1,5 @@
 @import "../../core/variables/colors";
+@import "../../core/variables/variables";
 
 .posts {
   &__avatar {
@@ -9,7 +10,7 @@
     user-select: none;
 
     .image {
-      $transition: .3s;
+      $transitionTime: .3s;
       position: relative;
       height: 100%;
       width: 100%;
@@ -31,7 +32,7 @@
         background-color: rgba(0, 0, 0, 0.75);
         opacity: 0;
         z-index: 1;
-        transition: $transition;
+        transition: $transitionTime;
       }
 
       &__info {
@@ -43,7 +44,7 @@
         transform: translate(-50%, -50%);
         z-index: 2;
         opacity: 0;
-        transition: $transition;
+        transition: $transitionTime;
 
         &__like-count {
           font-size: 14px;
