Replace footer and navbar components from app folder to the core folder

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <ul class="navbar__list">
       <li class="navbar__list__item navbar__list__item_brand" routerLink="">
-        <img class="brand__logo" src="../../assets/images/AngularShield.svg" alt="Angugram">
+        <img class="brand__logo" src="../../../../assets/images/AngularShield.svg" alt="Angugram">
         <span class="brand__text">ngugram</span>
       </li>
       <li class="navbar__list__item navbar__list__item_right">
