--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
-@import "../core/variables/colors";
-@import "../core/variables/variables";
+@import "../../variables/colors";
+@import "../../variables/variables";
 
 .navbar {
   font-family: Roboto, sans-serif;
