--- a/src/app/tag/tag.component.html
+++ b/src/app/tag/tag.component.html
@@ -1,3 +1,15 @@
-<p>
-  tag works!
-</p>
+<app-preloader
+  *ngIf="!isDataLoaded">
+</app-preloader>
+<app-tag-posts
+  *ngIf="tag; else notFound"
+  [tag]="tag">
+</app-tag-posts>
+
+<ng-template #notFound>
+  <div class="user">
+    <p class="user__not-found">
+      {{ errorMessage }}
+    </p>
+  </div>
+</ng-template>
