Rename NumberFormat pipe to NumberShorten pipe & update usages

--- a/src/app/user/user-posts/user-posts.component.html
+++ b/src/app/user/user-posts/user-posts.component.html
@@ -30,7 +30,7 @@
           </i>
         </div>
         <p class="image__info__likes-count">
-          {{ post.likes | numberFormat }}
+          {{ post.likes | numberShorten }}
         </p>
       </div>
       <img
